fix: hero image causing layout shift

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -136,7 +136,7 @@ const getPageHeading = () => {
 			}
 		</ul>
 
-		<ul class="flex items-center justify-center gap-4">
+		<ul class="flex items-center justify-center gap-4 md:mr-12">
 			<li>
 				<span
 					role="link"
