fix: this obsession with 1px margin isnt healthy

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -136,7 +136,7 @@ const getPageHeading = () => {
 			}
 		</ul>
 
-		<ul class="flex items-center justify-center gap-4 md:mr-12">
+		<ul class="flex items-center justify-center gap-4 md:mr-12 md:mt-[1px]">
 			<li>
 				<span
 					role="link"
