fix: header alignment on zoom

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -80,7 +80,7 @@ const getPageHeading = () => {
 	class="fixed inset-x-0 top-0 z-10 h-[56px] bg-white/80 backdrop-blur-md dark:bg-ghostindigo-900/80"
 >
 </div>
-<header class="container sticky top-0 z-20">
+<header class="lg:container sticky top-0 z-20">
 	<nav
 		class="sticky -ml-3.5 flex h-full w-full items-center justify-between border-gray-200 bg-transparent bg-opacity-60 px-8 py-2 text-gray-900 dark:border-gray-700 dark:text-gray-100 md:ml-0 md:items-center md:pt-4 lg:px-0"
 		aria-labelledby="main navigation bar"
@@ -136,7 +136,7 @@ const getPageHeading = () => {
 			}
 		</ul>
 
-		<ul class="flex items-center justify-center gap-4 md:mr-12 md:mt-[1px]">
+		<ul class="flex items-center justify-center gap-4 md:mr-0 lg:mr-12 md:mt-[1px]">
 			<li>
 				<span
 					role="link"
