--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -43,7 +43,7 @@ const paginationProps = {
 
 <PageLayout meta={meta}>
 	<h1 class="text-xl font-bold mb-6">{page.currentPage === 1 ? "Latest Posts" : `Older Posts - Page ${page.currentPage}`}</h1>
-	<div class="grid gap-y-16 sm:grid-cols-[5fr_1.4fr] sm:gap-x-8">
+	<div class="grid gap-y-16 lg:grid-cols-[5fr_1.4fr] lg:gap-x-8">
 		<section aria-label="Blog post list">
 			<ul class="space-y-6 text-start">
 				{
