fix: open social links in new tab

--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -174,6 +174,8 @@ const isActive = (href: string, external: boolean) => {
 		<li class="px-3">
 			<a
 				href="https://github.com/shrirambalaji"
+				target="_blank"
+				rel="noopener noreferrer"
 				class="mr-0 fill-ghostindigo-300 dark:fill-ghostindigo-300 transition-colors hover:fill-ghostindigo-800 dark:hover:fill-ghostindigo-100"
 			>
 				<svg width="30" height="30" viewBox="0 0 24 24" >
@@ -186,6 +188,8 @@ const isActive = (href: string, external: boolean) => {
 		<li class="px-2">
 			<a
 				href="https://x.com/shrirambalaji"
+				target="_blank"
+				rel="noopener noreferrer"
 				class="mr-0 fill-ghostindigo-300 dark:fill-ghostindigo-300 transition-colors hover:fill-ghostindigo-800 dark:hover:fill-ghostindigo-100"
 			>
 				<svg width="30" height="30" viewBox="0 0 24 24">
@@ -198,6 +202,8 @@ const isActive = (href: string, external: boolean) => {
 		<li class="px-3">
 			<a
 				href="https://linkedin.com/in/shrirambalaji"
+				target="_blank"
+				rel="noopener noreferrer"
 				class="mr-0 fill-ghostindigo-300 dark:fill-ghostindigo-300 transition-colors hover:fill-ghostindigo-800 dark:hover:fill-ghostindigo-100"
 			>
 				<svg width="30" height="30" viewBox="0 0 24 24">
