--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -8,12 +8,12 @@ type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
 	withDesc?: boolean;
 };
 
-const { post, as: Tag = "div", withDesc = false } = Astro.props;
+const { post, as: Tag = "div", withDesc = false, ...rest } = Astro.props;
 const postDate = post.data.updatedDate ?? post.data.publishDate;
 ---
 
 <FormattedDate date={postDate} class="min-w-[100px] font-medium text-gray-500 dark:text-ghostindigo-400 self-start md:self-center" />
-<Tag>
+<Tag {...rest}>
 	<a href={`/posts/${post.slug}/`} class="astro-link text-lg self-start font-semibold" rel="prefetch">
 		{post.data.seriesCount ? post.data.series : post.data.title}
 		{post.data.seriesCount && (
