--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -49,7 +49,7 @@ const paginationProps = {
 				{
 					page.data.map((p) => (
 						<li class="flex md:flex-row flex-col items-start md:items-center flex-wrap gap-2 [&_q]:basis-full">
-							<PostPreview post={p} as="h2" withDesc />
+							<PostPreview post={p} as="h2" class="w-full" withDesc />
 						</li>
 					))
 				}
